Nicebank. Spring DI, beans in config file