@@ -11,8 +11,7 @@
     <artifactId>nicebank</artifactId>
     <properties>
         <cucumber.version>2.4.0</cucumber.version>
-        <!--<spring.version>4.3.10.RELEASE</spring.version>-->
-        <spring.version>5.1.8.RELEASE</spring.version>
+        <spring.version>4.3.16.RELEASE</spring.version>
         <jetty.version>9.4.15.v20190215</jetty.version>
         <selenium.version>3.141.59</selenium.version>
         <appacheCommonsIO.version>2.6</appacheCommonsIO.version>
@@ -71,6 +70,19 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-testng -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>${cucumber.version}</version>
+        </dependency>
+
         <!-- ========================================================================================= -->
         <!-- ============================== Runtime Dependencies  ==================================== -->
         <!-- ========================================================================================= -->
@@ -105,45 +117,10 @@
             <scope>test</scope>
         </dependency>
 
-    </dependencies>
-    <!--    <properties>
-            <cucumber.version>1.2.5</cucumber.version>
-            <picocontainer.version>2.14.2</picocontainer.version>
-        </properties>
-        <dependencies>
-            &lt;!&ndash; https://mvnrepository.com/artifact/io.cucumber/cucumber-java &ndash;&gt;
-            <dependency>
-                <groupId>info.cukes</groupId>
-                <artifactId>cucumber-java</artifactId>
-                <version>${cucumber.version}</version>
-            </dependency>
-            &lt;!&ndash; https://mvnrepository.com/artifact/info.cukes/cucumber-testng &ndash;&gt;
-            <dependency>
-                <groupId>info.cukes</groupId>
-                <artifactId>cucumber-testng</artifactId>
-                <version>${cucumber.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.picocontainer</groupId>
-                <artifactId>picocontainer</artifactId>
-                <version>${picocontainer.version}</version>
-            </dependency>
 
-        </dependencies>-->
+    </dependencies>
    <build>
        <plugins>
-<!--           <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-surefire-plugin</artifactId>
-               <version>${surefire.version}</version>
-               <configuration>
-                   <argLine>-Duser.language=en</argLine>
-                   <argLine>-Xmx1024m</argLine>
-                   <argLine>-XX:MaxPermSize=256m</argLine>
-                   <argLine>-Dfile.encoding=UTF-8</argLine>
-                   <useFile>false</useFile>
-               </configuration>
-           </plugin>-->
            <plugin>
                <groupId>org.javalite</groupId>
                <artifactId>activejdbc-instrumentation</artifactId>
